Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: 'false'
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  generation: 5
  name: apps
  namespace: apps
spec:
  rules:
    - host: apps.testing.com
      http:
        paths:
          - backend:
              serviceName: apps
              servicePort: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - apps.testing.com
      secretName: tls-apps
